# fp-homework-2020

./: stack.yaml
fp-homework/: LICENSE  README.md
fp-homework/hw1/: README.md  hw1.cabal
fp-homework/hw2/: README.md  hw2.cabal
fp-homework/hw3/: README.md  hw3.cabal
fp-homework/hw4/: README.md  hw4.cabal
hw0/: hw0.cabal
hw0/src/: Task1.hs  Task2.hs  Task3.hs  Task4.hs  Task5.hs  Task6.hs
hw1/: hw1.cabal
hw1/hw1_second_chance/: Task6_1.hs  Task6_2.hs  Task6_3.hs
hw1/src/: Task1_1.hs  Task1_2.hs  Task1_3.hs  Task2_2.hs  Task3_1.hs  Tree.hs
hw1/test/: Spec.hs  Task1_1Test.hs  Task1_2Test.hs  Test1_1.hs  Test1_2.hs  Test2_2.hs  Test3_1.hs  Test6.hs  TestError.hs  TestTreeStructure.hs
hw2/: hw2.cabal
hw2/app/: Main.hs
hw2/src/: Commands.hs  DirParser.hs  DirTui.hs  FileDirectory.hs  FileParser.hs  FileTui.hs  PrintFileSystem.hs  ReadFileSystem.hs  Tui.hs  Utils.hs
hw2/test/: Spec.hs  TestFileDirectory.hs  TestUtils.hs
